--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-map-widgets==0.2.1
 django-storages==1.7.1
 idna==2.8
 Pillow==5.4.1
+psycopg2==2.7.7
 pytz==2018.9
 requests==2.21.0
 stripe==2.21.0
