--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 certifi==2018.11.29
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==1.11.18
 django-forms-bootstrap==3.1.0
 django-geoposition==0.3.0
 django-storages==1.7.1
+geographiclib==1.49
+geopy==1.18.1
 idna==2.8
 Pillow==5.4.1
 psycopg2==2.7.7
