--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2018.11.29
 chardet==3.0.4
+coverage==4.5.2
 dj-database-url==0.5.0
 Django==1.11.18
+django-filter==2.1.0
 django-forms-bootstrap==3.1.0
 https://github.com/philippbosch/django-geoposition/archive/django-1.11.zip
 django-storages==1.7.1
