--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ python:
 install: "pip install -r requirements.txt"
 script:
 - SECRET_KEY="whatever" python manage.py test
+- python manage.py collectstatic
