--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ dj-database-url==0.5.0
 Django==1.11.18
 django-filter==2.1.0
 django-forms-bootstrap==3.1.0
-https://github.com/philippbosch/django-geoposition/archive/django-1.11.zip
 django-storages==1.7.1
 geographiclib==1.49
 geopy==1.18.1
@@ -18,3 +17,4 @@ requests==2.21.0
 stripe==2.21.0
 urllib3==1.24.1
 whitenoise==4.1.2
+-e git+git://github.com/philippbosch/django-geoposition.git@4ed91215a36e737c71fbdc023f134bd2cfe445b3#egg=django-geoposition
